--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "An easy-to-use declarative json-based database",
   "main": "src/index.js",
+  "engines": {
+    "node": ">=8.6.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
