Add missing keyword to package

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "javascript",
     "disk",
     "easy",
-    "simple"
+    "simple",
+    "node"
   ],
   "author": "Alejandro Loarca",
   "license": "MIT",
