--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
   "homepage": "https://github.com/Loarca/declarative-db#readme",
   "devDependencies": {
     "eslint": "^5.3.0"
+  },
+  "dependencies": {
+    "async-mutex": "^0.1.3"
   }
 }
